# cratedigger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
Source/: PathHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
